--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/maria-tyan/pay-fees#readme",
   "dependencies": {
     "date-fns": "^2.16.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.6.1"
   },
   "eslintConfig": {
     "root": true,
